# sandbox.fourier-series

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/fourier_series/: main.py
src/fourier_series/animation/: __init__.py  animation.py
src/fourier_series/logic/: __init__.py  dft.py  signal.py  svg_sampler.py
